src/test/deca/context/invalid/multiple_declaration.deca
// Description:
//    multiple_decalations
//
// Resultats:
//    Erreur contextuelle variable deja déclarée
//
// Historique:
//    cree le 08/01/2023

{
    boolean a; int a;
}
